# open-source-radar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  daily_update.yml  weekly_maintenance.yml
data/: ideas.json
docs/: architecture.md  deployment.md  migration_plan.md
src/: config.py  database.py  main.py  models.py
src/ai/: __init__.py  anthropic.py  base.py  gemini.py  huggingface.py  openai.py
src/categorizer/: __init__.py  engine.py
src/collectors/: __init__.py  base.py  github.py  hackernews.py  reddit.py
src/filters/: __init__.py  ai_evaluator.py  deduplicator.py  hard_rules.py
src/formatter/: __init__.py  readme_generator.py
src/monitoring/: __init__.py  alerts.py  tracker.py
src/publisher/: __init__.py  github_publisher.py
src/reports/: monthly_report.py
src/storage/: __init__.py  repository.py
src/utils/: logging.py  rate_limiter.py  retry.py
tests/: conftest.py  test_ai_evaluator.py  test_categorizer.py  test_collectors.py  test_database.py  test_filters.py  test_huggingface_provider.py  test_models.py  test_pipeline.py  test_publisher.py
